--- a/Frontend/src/assets/Styles/Cart.css
+++ b/Frontend/src/assets/Styles/Cart.css
@@ -1,3 +1,7 @@
+.cart-page {
+    display: flex;
+    flex-direction: column;
+}
 .cart-container {
     display: flex;
     flex-direction: column;
