Added a min-height of 90vh to all pages, to keep the footer at the bottom

--- a/Frontend/src/assets/Styles/Cart.css
+++ b/Frontend/src/assets/Styles/Cart.css
@@ -1,6 +1,9 @@
-.cart-page {
+.page {
     display: flex;
     flex-direction: column;
+}
+.cart-page {
+    min-height: 90vh;
 }
 .cart-container {
     display: flex;
