--- a/Frontend/src/assets/Styles/Footer.css
+++ b/Frontend/src/assets/Styles/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-    margin: 50px 0;
+    margin: 50px 0 0 0;
     height: 150px;
     background-color: #96c9f4;
     display: flex;
